third_party/vendor/rustversion-1.0.5/tests/ui/bad-date.stderr
error: expected nightly date, like 2020-02-25
 --> $DIR/bad-date.rs:1:24
  |
1 | #[rustversion::nightly(stable)]
  |                        ^^^^^^

error: expected nightly date, like 2020-02-25
 --> $DIR/bad-date.rs:4:28
  |
4 | #[rustversion::any(nightly(stable))]
  |                            ^^^^^^
